--- a/closedverse_main/templates/closedverse_main/elements/fr-accept.html
+++ b/closedverse_main/templates/closedverse_main/elements/fr-accept.html
@@ -6,7 +6,7 @@
                 {% user_sidebar_info fr.source %}
                 <pre>{% if fr.body %}{{ fr.body }}{% else %}<i>(No message)</i>{% endif %}</pre>
                 <p class="window-body-content">Accept {{ fr.source.nickname }}'s friend request?</p>
-                <div class="form-buttons">
+                <div class="form-buttons three">
                     <button class="olv-modal-close-button gray-button" data-event-type="cancel" type="button">Cancel</button><button class="cancel-button gray-button" type="button">Reject</button><button class="ok-button post-button black-button" data-event-type="ok" type="button">Accept</button>
                 </div>
             </div>
