--- a/closedverse_main/templates/closedverse_main/help/faq.html
+++ b/closedverse_main/templates/closedverse_main/help/faq.html
@@ -6,7 +6,10 @@
     <h2 class="label">Frequently Asked Questions (FAQ)</h2>
     <div id="guide" class="help-content">
       <div class="faq">
-        <p>Hey there! If you have any questions about Closedverse, this page aims to answer them.</p>
+        <p>Hey there! If you have any questions about Openverse, this page aims to answer them.</p>
+		
+		<h2>Openverse? Closedverse? What's this?</h2>
+		<p>The codename is Closedverse. It was meant to be a parody of Openverse, because Openverse used to suck. This is now Openverse though, because we had about 900 users until we realized the name really sucked.</p>
 		
 		<h2>Something's wrong (or I want to ask a question for this)</h2>
 		<p>Well then, no worries, you can instantly make a bug report or a suggestion via the Feedback button in your User Menu (top right corner). Enjoy!</p>
