--- a/closedverse_main/templates/closedverse_main/help/rules.html
+++ b/closedverse_main/templates/closedverse_main/help/rules.html
@@ -3,31 +3,38 @@
 {% user_sidebar request user user.profile 0 True %}
 <div class="main-column" id="help">
 <div class="post-list-outline">
-    <h2 class="label">Closedverse Rules</h2>
+    <h2 class="label">Openverse Rules</h2>
       <div class="help-content">
-        <p>There aren't any.<br><br><br><br>Well, actually there's just one.
-		<br>
-		<b>1: </b> You know what you can't do. Well, hopefully you do.
-		If you do or are doing something bad, it's up to a moderator/admin/any other authority to delete your stuff or give you a ban. You'll be given a reason if it isn't obvious. If it's something that isn't simple, it'll be worked out whether you regret it or not.
-		<br><br>Okay? Understood? Thanks, see ya.
-		</p>
+        <p>This page used to only have one rule, but since more problems have risen with only one rule, we have expanded it.</p>
         
-		<h2>But of course, it can never be as simple as that</h2>
-		<h3>NSFW</h3>
-		<p>At the moment, NSFW stuff is forbidden, unless in messages where the other person is okay with it.<br>I might be implementing an "NSFW community" system, in which someone can post there and not have the posts their in their profile, and also viewing the community will give a warning.</p>
-		<h3>Anime</h3>
-		<p>No.</p>
-		<h3>Hacking</h3>
-		<p>I'm pretty hack-proof. You don't need to hack me to see my source code, it's available at <a href="https://github.com/ariankordi/closedverse">https://github.com/ariankordi/closedverse</a>.<br>If you can't read that, perhaps you should spend your time figuring out how to.<br>Specifically, I'm using Django. It's free of 99.9999% of injections, so there isn't any point to injecting HTML or SQL. If you do, you'll look like an idiot.</p>
-		<h3>Spam</h3>
-		<p>Please don't, I have an Amazon Web Services bill to pay at the end of each month.</p>
-		<h3>Yeahing</h3>
-		<p>This is spam. If you use a script to do this, you're paying the bills for the month.</p>
-		<h3>Public Mii/Mii Police/12 accounts/impostoring popular Miiverse users</h3>
-		<p>You're not funny, and you won't have any mercy laid on yourself.</p>
 		
-		<h2>And?</h2>
-		<p>If you're being funny, we'll be funny back ;)</p>
+		<h2>NSFW</h2>
+		<p>At the moment, NSFW stuff is forbidden, unless in messages where the other person is okay with it.<br>We might be implementing an "NSFW community" system, in which someone can post there and not have the posts their in their profile, and also viewing the community will give a warning. If this is implemented, this rule will be edited (not implemented as of September 29)</p>
+		<h2>Offensive content</h2>
+		<p>It isn't okay if a lot of people can see it, or if it's directed at a person/group. This includes offending furries.</p>
+		<h2>Porn/gore</h2>
+		<p>A lot of people don't want to see it. Please do not do that. If you do, lots of users will be happy to snitch you. You will not have any mercy laid on you.</p>
+		<h2>I had to address this too</h2>
+		<p>Please do not say stuff like "ALLAHU AKBAR" or what have you. I'm being serious. Do that on any other forum or well moderated place and you'll be penalized if you do. It's not a "that's offensive to my culture" thing, content like this is removed on lots of sites for a reason. I'm in trouble if you are, alright? I worked hard on this..</p>
+		<h2>Hate speech</h2>
+		<p>This is strongly forbidden. If we can't talk you out of stopping, then no mercy will be laid on you. If you want a free speech allowing social network, please try <a href="https://gab.ai/">GAB</a>. We are NOT welcome to hate and hate speech, and while you might be reasoning with your "free speech", we are very diverse, and that diversity can be easily offended. Yes, there exist people that can be offended.</p>
+		<h2>Sexual harassment</h2>
+		<p>Unless you're joking, it's disgusting, please don't.</p>
+		<hr>
+		<h2>Hacking</h2>
+		<p>I'm pretty hack-proof. You don't need to hack me to see my source code, it's available at <a href="https://github.com/ariankordi/closedverse">https://github.com/ariankordi/closedverse</a>.<br>If you can't read that, perhaps you should spend your time figuring out how to.<br>Specifically, I'm using Django. It's free of 99.9999% of injections, so there isn't any point to injecting HTML or SQL. If you do, you'll look like an idiot.</p>
+		<h2>Spam</h2>
+		<p>Please don't, I have an <s>Amazon Web Services</s> DigitalOcean bill to pay at the end of each month.</p>
+		<h2>Yeahing</h2>
+		<p>This is spam. If you use a script to do this, you're paying my bills for the month. I'll let you know when that happens.</p>
+		<h2>Public Mii/Mii Police/12 accounts/impostoring popular Miiverse users</h2>
+		<p>You're not funny, and you won't have any mercy laid on yourself.</p>
+		<br>
+		<hr>
+		<h2>Repeals</h2>
+		<p>Unless you're too bad, you can get more chances. If we still don't like your behavior, you'll be returned to the state you were.</p>
+		<h2>Begging for an unban</h2>
+		<p>If you only do it in one session, you'll be forgiven. If you do not stop begging an admin for an unban on a separate messaging site, you will be ignored unless you write a beautifully structured repeal asking why you should have an unban.</p>
       </div>
   </div>
 </div>
