--- a/closedverse_main/templates/closedverse_main/elements/user-sidebar.html
+++ b/closedverse_main/templates/closedverse_main/elements/user-sidebar.html
@@ -114,7 +114,7 @@
 				<span>{% time user.created True %}</span>
 			</div>
 		</div>
-		{% if not user.online_status == None %}
+		{% if profile.let_presence_view %}
 		<div class="data-content">
 			<h4><span>Last seen</span></h4>
 			<div class="note">
