--- a/closedverse_main/templates/closedverse_main/forgot_page.html
+++ b/closedverse_main/templates/closedverse_main/forgot_page.html
@@ -14,6 +14,7 @@
 			
 			<div class="ll">
 				<p>Having issues? Want to get back into your account? Try <a href="{% url "main:help-contact" %}">contacting us</a> if you need help with this.</p>
+				<p>Notice: Your user ID is used to log in, and is sometimes referred to as a username. It is below your nickname in most cases, please make sure you are using your user ID and your password.</p>
 			</div>
 		</form>
 	</div>
