--- a/closedverse_main/templates/closedverse_main/activity-loading.html
+++ b/closedverse_main/templates/closedverse_main/activity-loading.html
@@ -28,7 +28,7 @@
   <div id="js-main">
     <div class="activity-feed content-loading-window">
       <div>
-        <img src="{% static "img/loading-image-blue.gif" %}" alt=""></img>
+        <span class=spinner><span class="spinner-inner spinner-wandering-cubes"><span class=spinner-item></span><span class=spinner-item></span></span></span>
         <p class="tleft"><span>Loading activity feed...</span></p>
       </div>
     </div>
