--- a/closedverse_main/templates/closedverse_main/help/legal.html
+++ b/closedverse_main/templates/closedverse_main/help/legal.html
@@ -22,10 +22,14 @@ If anything here infringes on your rights, please contact me:
 or
 <a href="mailto:ariankordi@gmail.com">ariankordi@gmail.com</a>
 
+The specified content that does not belong to Arian Kordi, the owner, is:
+* The spinner "spinner-wandering-cubes" seen in Activity Feed loading, scrolling (Autopagerize), and admin management loading, which is owned and designed entirely by <i>Hammer & Chisel (Discord)</i>
+* The majority of the JavaScript, CSS and HTML files and the style of <i>Miiverse</i> is owned entirely by <i>Hatena Co, Ltd.</i> and <i>Nintendo Co, Ltd.</i>
+
 I will take this project and <a href="https://github.com/ariankordi/closedverse">its GitHub repository</a> down under any valid request.
 Thank you!
 
-<i>Revision 2, updated August 17 2017</i></pre>
+<i>Revision 3, updated October 2 2017</i></pre>
 
 	<center>
     	<h3>User content policy</h3>
