--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -76,11 +76,11 @@
       <div id="footer">
         <div id="footer-inner">
           <div class="link-container">
-			<p><a href="https://discord.gg/KvmdbqM">Discord Guild</a></p>
-			<p><a href="https://ariankordi.net/">My website</a></p>
+			<p><a href="https://discord.gg/KvmdbqM">Official Discord guild</a></p>
+			<p><a href="/meta/contact">Contact</a></p>
 			<p><a href="https://github.com/ariankordi/closedverse">GitHub</a></p>
 			<p id="copyright"><a href="https://miiverse.nintendo.net/">Inspired by Hatena Co, Ltd/Nintendo's Miiverse. I don't nor wish to make money from this. Please support them as they deserve your business.</a><br>
-			<a href="https://getfedora.org/"><img src="/s/fedora.png" alt="[ Powered by Fedora ]"> &nbsp;<img src="/s/redhat.png"></a></p>
+			<a href="https://m.do.co/c/c782a72da538"><img src="https://www.digitalocean.com/assets/media/logos-badges/png/DO_Powered_by_Badge_blue-fe4c6688.png" width="150" height="31"></a></p>
 			</div>
         </div>
       </div>
