--- a/closedverse_main/templates/closedverse_main/post-view.html
+++ b/closedverse_main/templates/closedverse_main/post-view.html
@@ -43,7 +43,7 @@
 				<textarea name="body" class="textarea-text textarea " maxlength="2200" placeholder="Edit your post." data-required="">{{ post.body }}</textarea>
 			</div>
 				<div class="post-form-footer-options">
-					<label class="spoiler-button symbol"><input id="is_spoiler" name="is_spoiler" type="checkbox" value="1">Spoilers</label>
+					<label class="spoiler-button symbol"><input id="is_spoiler" name="is_spoiler" type="checkbox" value="1"{% if post.spoils %} checked{% endif %}>Spoilers</label>
 				</div>
 				<div class="form-buttons">
 					<button type="button" class="cancel-button gray-button">Cancel</button>
