--- a/closedverse_main/templates/closedverse_main/layout.html
+++ b/closedverse_main/templates/closedverse_main/layout.html
@@ -15,6 +15,7 @@
 	<link rel="shortcut icon" type="image/png" href="{% static "favicon.ico" %}">
     <link rel="stylesheet" type="text/css" href="{% static "closedverse.css" %}">
 	<link id="darkness" {% if request.session.lights %}disabled {% endif %}rel="stylesheet" type="text/css" href="{% static "blueness.css" %}">
+    <script src="{% static "jslibs.js" %}"></script>
     <script src="{% static "closedverse.js" %}"></script>
   </head>
 
