--- a/closedverse_main/templates/closedverse_main/man/admin-user-list.html
+++ b/closedverse_main/templates/closedverse_main/man/admin-user-list.html
@@ -5,9 +5,7 @@
     {% user_icon_container user 0 False %}
 
 	<div class="toggle-button">
-	{% if user.can_manage %}
-      		<button type="button" class="button symbol" disabled="">Manage</button>
-	{% endif %}
+      		<button type="button" class="button user-manage symbol">Manage</button>
 	</div>
 
   <div class="body">
