--- a/static/blueness.css
+++ b/static/blueness.css
@@ -185,6 +185,7 @@ form.search input[type="submit"] {
     border-bottom-color: #000;
     box-shadow: inset 0 0.5px 0 rgba(0, 0, 0, 0.9);
 }
+
 .topic-categories-container {
     background: #202030;
     -webkit-box-shadow: 0 1px 0 #202030;
@@ -484,19 +485,30 @@ background-color: #191828 !important;
 	background-color: #333 !important;
 	}
 }
-html::-webkit-scrollbar {
+@media screen and (max-width: 640px) {
+	.list .toggle-button .button:before {
+    height: 28px !important;
+	}
+}
+html::-webkit-scrollbar,
+textarea::-webkit-scrollbar {
   width: 10px;
   height: 10px;
 }
-html::-webkit-scrollbar-thumb {
+html::-webkit-scrollbar-thumb,
+textarea::-webkit-scrollbar-thumb {
 background-color: #3c3c3c;
 }
-html::-webkit-scrollbar-track {
+html::-webkit-scrollbar-track,
+textarea::-webkit-scrollbar-track {
 background: #000;
 }
-html::-webkit-scrollbar-corner {
+html::-webkit-scrollbar-corner,
+textarea::-webkit-scrollbar-corner {
 background: transparent;
 }
 
-/*--------Mostly all of the dark theme was made by CodyMKW, please make sure he's noticed--------*/
-/*PF2M also modded this hack, not to mention myself making it complete*/
+/*
+CodyMKW completely made this dark theme, please show him love.
+I might have made it better and actually suitable for mainstream use, but seriously, he made the entire thing at the beginning of the project and now it's here to stay.
+*/
