--- a/closedverse_main/templates/closedverse_main/help/legal.html
+++ b/closedverse_main/templates/closedverse_main/help/legal.html
@@ -4,6 +4,7 @@
   <title>Legal info</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap for this, why not? -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
@@ -23,32 +24,34 @@ or
 <a href="mailto:ariankordi@gmail.com">ariankordi@gmail.com</a>
 
 The specified content that does not belong to Arian Kordi, the owner, is:
-* The spinner "spinner-wandering-cubes" seen in Activity Feed loading, scrolling (Autopagerize), and admin management loading, which is owned and designed entirely by <i>Hammer & Chisel (Discord)</i>
-* The majority of the JavaScript, CSS and HTML files and the style of <i>Miiverse</i> is owned entirely by <i>Hatena Co, Ltd.</i> and <i>Nintendo Co, Ltd.</i>
+* The spinner "spinner-wandering-cubes" seen in Activity Feed loading, scrolling (Autopagerize), and admin management loading, which is owned and designed entirely by <em>Hammer & Chisel (Discord)</em>
+* The majority of the JavaScript, CSS and HTML files and the style of <em>Miiverse</em> is owned entirely by <em>Hatena Co, Ltd.</em> and <em>Nintendo Co, Ltd.</em>
 
 I will take this project and <a href="https://github.com/ariankordi/closedverse">its GitHub repository</a> down under any valid request.
 Thank you!
 
-<i>Revision 3, updated October 2 2017</i></pre>
+<em>Revision 3, updated October 2 2017</em></pre>
 
 	<center>
     	<h3>User content policy</h3>
     </center>
     <pre style="white-space:pre-wrap;">
-User content is not owned by me or the site. Any users' content (posts, empathies or Yeah!s, follows, friend requests, friendships, private messages, etc..) <b>is their sole responsibility.</b>
+User content is not owned by me or the site. Any users' content (posts, empathies or Yeah!s, follows, friend requests, friendships, private messages, etc..) <strong>is their sole responsibility.</strong>
 I am not and do not want to be deemed responsible if any user transmits content that can spawn a legal problem.
 I am only a host for the content and so is the image hosting provider(s) if applicable.
 
-If you have a problem that requires attention by <b>me</b>, please contact me:
+If you have a problem that requires attention by <strong>me</strong>, please contact me:
 <a href="mailto:ariankordi@ariankordi.net">ariankordi@ariankordi.net</a>
 or
 <a href="mailto:ariankordi@gmail.com">ariankordi@gmail.com</a>
 
 If you feel you have the need to contact law enforcement for any case, please do so. Don't contact me if you have a major legal problem. I will not forward anything to your police department because I don't have the time and I don't know where you live.
 
+Every user must be 13 years of age or older in order to use the site. We do not follow (and personally heavily deplore) any child protection acts, such as COPPA. Any user under 12 years of age is not permitted to use this site.
+
 Thank you!
 
-<i>Revision 2, updated August 17 2017</i></pre>
+<em>Revision 3, updated October 6 2017</em></pre>
 <button type="button" class="btn btn-primary" onclick="window.history.back();">Go back</button>
 	</div>
 </body>
